samples/_failures_safe/1761084054_063c8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a42d1537.c: In function ‘main’:
./samples/SAFE/__tmp_a42d1537.c:140:5: error: expected identifier or ‘(’ at end of input
  140 |     double
      |     ^~~~~~
./samples/SAFE/__tmp_a42d1537.c:140:5: error: expected declaration or statement at end of input
